sys/src/linux/x86_64.rs

pub const LV2_UI__portNotification: &[u8; 52] =
    b"http://lv2plug.in/ns/extensions/ui#portNotification\0";
pub const LV2_UI__portSubscribe: &[u8; 49] = b"http://lv2plug.in/ns/extensions/ui#portSubscribe\0";
pub const LV2_UI__protocol: &[u8; 44] = b"http://lv2plug.in/ns/extensions/ui#protocol\0";
pub const LV2_UI__requestValue: &[u8; 48] = b"http://lv2plug.in/ns/extensions/ui#requestValue\0";
pub const LV2_UI__floatProtocol: &[u8; 49] = b"http://lv2plug.in/ns/extensions/ui#floatProtocol\0";
pub const LV2_UI__peakProtocol: &[u8; 48] = b"http://lv2plug.in/ns/extensions/ui#peakProtocol\0";
pub const LV2_UI__resize: &[u8; 42] = b"http://lv2plug.in/ns/extensions/ui#resize\0";
pub const LV2_UI__showInterface: &[u8; 49] = b"http://lv2plug.in/ns/extensions/ui#showInterface\0";
pub const LV2_UI__touch: &[u8; 41] = b"http://lv2plug.in/ns/extensions/ui#touch\0";
pub const LV2_UI__ui: &[u8; 38] = b"http://lv2plug.in/ns/extensions/ui#ui\0";
pub const LV2_UI__updateRate: &[u8; 46] = b"http://lv2plug.in/ns/extensions/ui#updateRate\0";
pub const LV2_UI__windowTitle: &[u8; 47] = b"http://lv2plug.in/ns/extensions/ui#windowTitle\0";
pub const LV2_UI__scaleFactor: &[u8; 47] = b"http://lv2plug.in/ns/extensions/ui#scaleFactor\0";
pub const LV2_UI__foregroundColor: &[u8; 51] =
    b"http://lv2plug.in/ns/extensions/ui#foregroundColor\0";
pub const LV2_UI__backgroundColor: &[u8; 51] =
    b"http://lv2plug.in/ns/extensions/ui#backgroundColor\0";
pub const LV2_UNITS_URI: &[u8; 38] = b"http://lv2plug.in/ns/extensions/units\0";
pub const LV2_UNITS_PREFIX: &[u8; 39] = b"http://lv2plug.in/ns/extensions/units#\0";
pub const LV2_UNITS__Conversion: &[u8; 49] = b"http://lv2plug.in/ns/extensions/units#Conversion\0";
pub const LV2_UNITS__Unit: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#Unit\0";
pub const LV2_UNITS__bar: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#bar\0";
pub const LV2_UNITS__beat: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#beat\0";
pub const LV2_UNITS__bpm: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#bpm\0";
pub const LV2_UNITS__cent: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#cent\0";
pub const LV2_UNITS__cm: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#cm\0";
pub const LV2_UNITS__coef: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#coef\0";
pub const LV2_UNITS__conversion: &[u8; 49] = b"http://lv2plug.in/ns/extensions/units#conversion\0";
pub const LV2_UNITS__db: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#db\0";
pub const LV2_UNITS__degree: &[u8; 45] = b"http://lv2plug.in/ns/extensions/units#degree\0";
pub const LV2_UNITS__frame: &[u8; 44] = b"http://lv2plug.in/ns/extensions/units#frame\0";
pub const LV2_UNITS__hz: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#hz\0";
pub const LV2_UNITS__inch: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#inch\0";
pub const LV2_UNITS__khz: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#khz\0";
pub const LV2_UNITS__km: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#km\0";
pub const LV2_UNITS__m: &[u8; 40] = b"http://lv2plug.in/ns/extensions/units#m\0";
pub const LV2_UNITS__mhz: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#mhz\0";
pub const LV2_UNITS__midiNote: &[u8; 47] = b"http://lv2plug.in/ns/extensions/units#midiNote\0";
pub const LV2_UNITS__mile: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#mile\0";
pub const LV2_UNITS__min: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#min\0";
pub const LV2_UNITS__mm: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#mm\0";
pub const LV2_UNITS__ms: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#ms\0";
pub const LV2_UNITS__name: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#name\0";
pub const LV2_UNITS__oct: &[u8; 42] = b"http://lv2plug.in/ns/extensions/units#oct\0";
pub const LV2_UNITS__pc: &[u8; 41] = b"http://lv2plug.in/ns/extensions/units#pc\0";
pub const LV2_UNITS__prefixConversion: &[u8; 55] =
    b"http://lv2plug.in/ns/extensions/units#prefixConversion\0";
pub const LV2_UNITS__render: &[u8; 45] = b"http://lv2plug.in/ns/extensions/units#render\0";
pub const LV2_UNITS__s: &[u8; 40] = b"http://lv2plug.in/ns/extensions/units#s\0";
pub const LV2_UNITS__semitone12TET: &[u8; 52] =
    b"http://lv2plug.in/ns/extensions/units#semitone12TET\0";
pub const LV2_UNITS__symbol: &[u8; 45] = b"http://lv2plug.in/ns/extensions/units#symbol\0";
pub const LV2_UNITS__unit: &[u8; 43] = b"http://lv2plug.in/ns/extensions/units#unit\0";
pub const LV2_URI_MAP_URI: &[u8; 33] = b"http://lv2plug.in/ns/ext/uri-map\0";
pub const LV2_URI_MAP_PREFIX: &[u8; 34] = b"http://lv2plug.in/ns/ext/uri-map#\0";
pub const LV2_WORKER_URI: &[u8; 32] = b"http://lv2plug.in/ns/ext/worker\0";
pub const LV2_WORKER_PREFIX: &[u8; 33] = b"http://lv2plug.in/ns/ext/worker#\0";
pub const LV2_WORKER__interface: &[u8; 42] = b"http://lv2plug.in/ns/ext/worker#interface\0";
pub const LV2_WORKER__schedule: &[u8; 41] = b"http://lv2plug.in/ns/ext/worker#schedule\0";
#[doc = " The header of an atom:Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom {
    #[doc = "< Size in bytes, not including type and size."]
    pub size: u32,
    #[doc = "< Type of this atom (mapped URI)."]
    pub type_: u32,
}
#[doc = " An atom:Int or atom:Bool.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Int {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Integer value."]
    pub body: i32,
}
#[doc = " An atom:Long.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Long {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Integer value."]
    pub body: i64,
}
#[doc = " An atom:Float.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Float {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Floating point value."]
    pub body: f32,
}
#[doc = " An atom:Double.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Double {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Floating point value."]
    pub body: f64,
}
#[doc = " An atom:Bool.  May be cast to LV2_Atom."]
pub type LV2_Atom_Bool = LV2_Atom_Int;
#[doc = " An atom:URID.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_URID {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< URID."]
    pub body: u32,
}
#[doc = " An atom:String.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_String {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
}
#[doc = " The body of an atom:Literal."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Literal_Body {
    #[doc = "< Datatype URID."]
    pub datatype: u32,
    #[doc = "< Language URID."]
    pub lang: u32,
}
#[doc = " An atom:Literal.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Literal {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Literal_Body,
}
#[doc = " An atom:Tuple.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Tuple {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
}
#[doc = " The body of an atom:Vector."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Vector_Body {
    #[doc = "< The size of each element in the vector."]
    pub child_size: u32,
    #[doc = "< The type of each element in the vector."]
    pub child_type: u32,
}
#[doc = " An atom:Vector.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Vector {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Vector_Body,
}
#[doc = " The body of an atom:Property (typically in an atom:Object)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Property_Body {
    #[doc = "< Key (predicate) (mapped URI)."]
    pub key: u32,
    #[doc = "< Context URID (may be, and generally is, 0)."]
    pub context: u32,
    #[doc = "< Value atom header."]
    pub value: LV2_Atom,
}
#[doc = " An atom:Property.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Property {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Property_Body,
}
#[doc = " The body of an atom:Object. May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object_Body {
    #[doc = "< URID, or 0 for blank."]
    pub id: u32,
    #[doc = "< Type URID (same as rdf:type, for fast dispatch)."]
    pub otype: u32,
}
#[doc = " An atom:Object.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Object_Body,
}
#[doc = " The header of an atom:Event.  Note this type is NOT an LV2_Atom."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct LV2_Atom_Event {
    pub time: LV2_Atom_Event__bindgen_ty_1,
    #[doc = "< Event body atom header."]
    pub body: LV2_Atom,
}
#[doc = " Time stamp.  Which type is valid is determined by context."]
#[repr(C)]
#[derive(Copy, Clone)]
pub union LV2_Atom_Event__bindgen_ty_1 {
    #[doc = "< Time in audio frames."]
    pub frames: i64,
    #[doc = "< Time in beats."]
    pub beats: f64,
}
#[doc = "The body of an atom:Sequence (a sequence of events).\n\nThe unit field is either a URID that described an appropriate time stamp\ntype, or may be 0 where a default stamp type is known.  For\nLV2_Descriptor::run(), the default stamp type is audio frames.\n\nThe contents of a sequence is a series of LV2_Atom_Event, each aligned\nto 64-bits, for example:\n<pre>\n| Event 1 (size 6)                              | Event 2\n|       |       |       |       |       |       |       |       |\n| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | |\n|FRAMES |SUBFRMS|TYPE   |SIZE   |DATADATADATAPAD|FRAMES |SUBFRMS|...\n</pre>"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Sequence_Body {
    #[doc = "< URID of unit of event time stamps."]
    pub unit: u32,
    #[doc = "< Currently unused."]
    pub pad: u32,
}
#[doc = " An atom:Sequence."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Sequence {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Sequence_Body,
}
pub type va_list = __builtin_va_list;
#[doc = " A single entry in an Object query."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object_Query {
    #[doc = "< Key to query (input set by user)"]
    pub key: u32,
    #[doc = "< Found value (output set by query function)"]
    pub value: *mut *const LV2_Atom,
}
unsafe extern "C" {
    #[doc = " Sentinel for lv2_atom_object_query()."]
    pub static LV2_ATOM_OBJECT_QUERY_END: LV2_Atom_Object_Query;
}
